# sudoku_rust

./: Cargo.toml  README.md
benches/: solver_benchmark.rs
src/: api.rs  benchmark.rs  generator.rs  lib.rs  main.rs  simd.rs  solver.rs
