[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-ready Sudoku solver using recursive backtracking"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rayon = "1.8.1"
crossbeam = "0.8.4"
once_cell = "1.19.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "solver_benchmark"
harness = false
